update build to error on file name setup concourse intercepting example

--- a/ci/build.yml
+++ b/ci/build.yml
@@ -11,7 +11,7 @@ inputs:
   - name: version
 
 outputs:
-  - name: build-output
+  - name: build-outpt
 
 run:
   path: bash
@@ -24,7 +24,6 @@ run:
     apt-get update
 
     apt-get -y install mysql-server
-    service mysql start
 
     cd pal-tracker
     mysql -uroot < databases/tracker/create_databases.sql
