--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -4,7 +4,7 @@ resources:
   type: git
   source:
     uri: {{github-repository}}
-    branch: solution-mysql-error
+    branch: solution-naming-error
     private_key: {{github-private-key}}
 
 - name: pal-tracker-artifacts
